# context-governance-gateway

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: validate.yaml
apps/api/: README.md
apps/api/src/cgg_api/: __init__.py  __main__.py  app.py  runtime.py  service.py  worker.py
apps/cli/src/cgg_cli/: __init__.py  cli.py
apps/dashboard/: README.md
apps/dashboard/src/cgg_dashboard/: __init__.py
contracts/schemas/: adapter-envelope.schema.json  context-artifact.schema.json  context-manifest.schema.json  model-safe-packet.schema.json  observability-event.schema.json  operator-dashboard.schema.json  operator-receipt.schema.json  projection-policy.schema.json  redaction-report.schema.json
deployments/docker-compose/: README.md
deployments/github-actions/: README.md
deployments/helm/: README.md
dev-integration/profiles/context-governance-gateway/: README.md  profile.yaml
docs/adr/: 0001-context-governance-gateway.md
docs/architecture/: observability-dashboard-foundation.md  phase-1-local-pipeline.md
docs/operating-model/: dev-integration-service.md  local-cli.md
docs/threat-model/: phase-1-local-custody.md
policies/opa/: context_admission.rego  debug_override.rego  redaction.rego  retention.rego
profiles/: casual.json  developer.json  enterprise.json
tests/: test_adapter_foundation.py  test_dev_integration_profile.py  test_observability_dashboard.py  test_pipeline.py  test_policy_foundation.py  test_service_foundation.py
(+8 files in other folders)
