[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-governance-gateway"
version = "0.1.0"
description = "Operational Context Governance and Context Admission Control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cgg = "cgg_cli.cli:main"

[tool.setuptools.packages.find]
where = ["apps/cli/src", "packages/context_core/src"]
