[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-governance-gateway"
version = "0.1.0"
description = "Operational Context Governance and Context Admission Control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "pydantic>=2",
  "uvicorn>=0.30",
]
storage = [
  "boto3>=1.34",
  "psycopg[binary]>=3.2",
]

[project.scripts]
cgg = "cgg_cli.cli:main"

[tool.setuptools.packages.find]
where = ["apps/api/src", "apps/cli/src", "packages/context_adapters/src", "packages/context_core/src", "packages/context_policy/src", "packages/context_storage/src"]
